--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:logo="@drawable/logo_petit_lingo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo_petit_lingo"
+        android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.PetitLingo"
         tools:targetApi="31">
